<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/btn_install_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/install_search" />

    <Button
        android:id="@+id/btn_installed_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/installed_search" />

    <Button
        android:id="@+id/btn_repair_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repair_search" />

</LinearLayout>