<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/rl_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/name" />

            <EditText
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:ems="10"
                android:inputType="text|textPostalAddress" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/address" />

            <EditText
                android:id="@+id/text_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:singleLine="false" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_detailadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/detail_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/detail_address" />

            <EditText
                android:id="@+id/text_detailadd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:ems="10"
                android:inputType="text" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/type" />

            <RadioGroup android:id="@+id/rg_type" 
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_type_dz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/type_dz" />

                <RadioButton
                    android:id="@+id/radio_type_qy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_qy" />

                <RadioButton
                    android:id="@+id/radio_type_gx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/type_gx" />
            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_lantype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lan_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/lan_type" />

            <RadioButton
                android:id="@+id/radio_lantype_lan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/radio_lantype_wifi"
                android:text="@string/lantype_lan" />

            <RadioButton
                android:id="@+id/radio_lantype_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/lantype_wifi" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_boot_on_sunday"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/view_boot_on_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/boot_on_sunday" />

            <ToggleButton
                android:id="@+id/toggleButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dip" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_boot_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/view_boot_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/boot_time" />

            <EditText
                android:id="@+id/text_boot_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="time" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_shut_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/view_shut_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/shut_time" />

            <EditText
                android:id="@+id/text_shut_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:ems="10"
                android:inputType="text|time" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_contant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/view_contant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/contact" />

            <EditText
                android:id="@+id/text_contant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:ems="10"
                android:inputType="text" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/view_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/text_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:ems="10"
                android:inputType="phone|text|textPhonetic" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_main"
        android:layout_centerInParent="true" >

        <Button
            android:id="@+id/clearInfoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearinfo" />

        <Button
            android:id="@+id/genInfoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gen" />
    </LinearLayout>

</RelativeLayout>